--- a/templates/fm-adminer/docker-compose.j2
+++ b/templates/fm-adminer/docker-compose.j2
@@ -1,7 +1,7 @@
-  adminer:
+  fm-adminer:
     image: adminer
     restart: {{ services_restart_policy }}
     ports:
       - 3033:8080
     environment:
-      DOMAINS: adminer.manager.localhost
+      DOMAINS: adminer.fm.localhost
