--- a/templates/fm-db/docker-compose.j2
+++ b/templates/fm-db/docker-compose.j2
@@ -1,4 +1,4 @@
-  db:
+  fm-db:
     image: postgres:16-alpine
     restart: {{ services_restart_policy }}
     environment:
@@ -8,4 +8,4 @@
     ports:
       - "5432:5432"
     volumes:
-      - volume_db:/var/lib/postgresql/data
+      - volume_fm_db:/var/lib/postgresql/data
